[FIX] l10n_mx_edi_addenda_audi (#634)

--- a/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi_view.xml
+++ b/l10n_mx_edi_addenda_audi/views/l10n_mx_edi_addenda_audi_view.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="view_account_move_addenda_audi">
+    <template id="l10n_mx_edi_addenda_audi" name="Addenda Audi">
         <S:Factura
             xmlns:S="http://www.Audi.net.mx/Addenda/S"
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -23,7 +23,7 @@
                 <t t-foreach="record.invoice_line_ids" t-as="move_line">
                     <S:Parte
                         t-att-precioUnitario="move_line.price_unit"
-                        t-att-numeroParte="move_line.line_external_code"
+                        t-att-numeroParte="move_line.product_id.audi_ref"
                         t-att-descripcion="move_line.product_id.name"
                         t-attf-codigoImpuesto="D2"
                         t-att-cantidad="move_line.quantity"
@@ -40,11 +40,8 @@
         </S:Factura>
     </template>
 
-    <record
-        id="l10n_mx_edi_addenda_audi.view_account_move_addenda_audi"
-        model="ir.ui.view"
-    >
-        <field name="l10n_mx_addenda_flag" eval="True" />
+    <record id="l10n_mx_edi_addenda_audi" model="ir.ui.view">
+        <field name="l10n_mx_edi_addenda_flag" eval="True" />
     </record>
 
 </odoo>
