--- a/l10n_mx_edi_addenda_audi/views/account_move_views.xml
+++ b/l10n_mx_edi_addenda_audi/views/account_move_views.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="view_account_move_form_inherit_addenda_audi" model="ir.ui.view">
+
         <field name="name">account.move.form.inherit.addenda.audi</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='l10n_mx_edi_cfdi_origin']" position="after">
-                <field name="audi_business_unit" />
-                <field name="audi_applicant_email" />
+            <xpath expr="//notebook" position="inside">
+                <field name="audi_flag" invisible="1" />
+                <page name="Audi Addenda" invisible="not audi_flag">
+                    <group>
+                        <field name="audi_business_unit" invisible="not audi_flag" />
+                        <field name="audi_applicant_email" invisible="not audi_flag" />
+                    </group>
+                </page>
+            </xpath>
+            <xpath
+                expr="//notebook//page[@name='invoice_tab']//field[@name='invoice_line_ids']//tree//field[@name='product_id']"
+                position="after"
+            >
+                <field name="audi_line_product_ref" optional="hide" />
             </xpath>
         </field>
     </record>
