Adds PR 2303 (Fixes purchase_request readonly lines issue)

--- a/purchase_request/views/purchase_request_view.xml
+++ b/purchase_request/views/purchase_request_view.xml
@@ -144,7 +144,7 @@
                     </group>
                     <notebook>
                         <page string="Products">
-                            <field name="line_ids">
+                            <field name="line_ids" readonly="is_editable == False">
                                 <tree
                                     decoration-muted="cancelled == True"
                                     editable="bottom"
