--- a/ol_product_tariff/views/product.xml
+++ b/ol_product_tariff/views/product.xml
@@ -2,10 +2,11 @@
 <odoo>
 
     <!-- Product variant form view -->
-    <record model="ir.ui.view" id="product_normal_form_view">
-        <field name="name">ls_inbound_shipping.product.form.view</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_normal_form_view"/>
+    <record model="ir.ui.view" id="product_template_form_view_inhiert_tariff">
+        <field name="name">product.template.common.form</field>
+        <field name="model">product.template</field>
+        <field name="priority">20</field>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
             <!-- Add shipping type and calculated cost -->
             <div name="standard_price_uom" position="after">
