[FIX] ol_exception
Fixed create

--- a/ol_exception/views/exception_rule_view.xml
+++ b/ol_exception/views/exception_rule_view.xml
@@ -10,6 +10,9 @@
                     <field name="message_ids"/>
                 </div>
         	</xpath>
+            <field name="is_blocking" position="before">
+                <field name="method" readonly="exception_type != 'by_method'" invisible="exception_type != 'by_method'" />
+            </field>
         </field>
     </record>
 </odoo>
