--- a/ol_base/views/res_company.xml
+++ b/ol_base/views/res_company.xml
@@ -6,8 +6,12 @@
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form" />
         <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="external_display_name" />
+            </field>
             <field name="website" position="after">
-              <field name="company_user_id" />
+                <field name="short_name" />
+                <field name="company_user_id" />
             </field>
         </field>
     </record>
