--- a/ol_mrp_plm_cancel/views/mrp_eco_view.xml
+++ b/ol_mrp_plm_cancel/views/mrp_eco_view.xml
@@ -4,13 +4,14 @@
     <record id="mrp_eco_view_form_cancel" model="ir.ui.view">
         <field name="name">mrp.eco.view.form</field>
         <field name="model">mrp.eco</field>
-        <field name="inherit_id" ref="mrp_plm.mrp_eco_view_form"/>
+        <field name="inherit_id" ref="mrp_plm.mrp_eco_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//button[@name='reject']" position="after">
-                <button string="Cancel" name="action_cancel" type="object" class="oe_highlight" invisible="stage_id.cancel_stage == True" groups="mrp_plm.group_plm_user"/>
+                <button string="Cancel" name="action_cancel" type="object" class="oe_highlight" invisible="state == 'cancel'" groups="mrp_plm.group_plm_user" />
             </xpath>
             <field name="tag_ids" position="after">
-                <field name="initial_product_state_id"/>
+                <field name="initial_product_state_id" readonly="1" force_save="1" />
+                <field name="current_product_state_id" />
             </field>
         </field>
     </record>
