[FIX] l10n_mx_edi_addenda_audi: Refactor view

--- a/l10n_mx_edi_addenda_audi/views/account_move.xml
+++ b/l10n_mx_edi_addenda_audi/views/account_move.xml
@@ -14,11 +14,7 @@
                     </group>
                 </page>
             </xpath>
-            <xpath
-                expr="//tree//field[@name='product_id']"
-                position="after"
-                invisible="not audi_flag"
-            >
+            <xpath expr="//tree//field[@name='product_id']" position="after">
                 <field
                     name="audi_product_ref"
                     column_invisible="not parent.audi_flag"
