--- a/ol_product_tariff/views/product_views.xml
+++ b/ol_product_tariff/views/product_views.xml
@@ -19,7 +19,7 @@
         <field name="inherit_id" ref="product.product_normal_form_view" />
         <field name="arch" type="xml">
             <div name="standard_price_uom" position="after">
-                <field name="tariff_percent" readonly="1" />
+                <field name="tariff_percent" readonly="1" widget="percentage" />
             </div>
         </field>
     </record>
