[IMP] PLM Product and BOM Edit Restrictions

--- a/ol_mrp_plm/views/mrp_eco_stage.xml
+++ b/ol_mrp_plm/views/mrp_eco_stage.xml
@@ -10,6 +10,9 @@
             <field name="final_stage" position="after">
                 <field name="product_state_id" />
             </field>
+            <field name="allow_apply_change" position="before">
+                <field name="allow_bom_edits" />
+            </field>
         </field>
     </record>
 
