[FIX] ol_purchase_last_price_info/ol_product_pricing_review

--- a/ol_product_pricing_review/views/product_category_views.xml
+++ b/ol_product_pricing_review/views/product_category_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="stock_account.view_category_property_form_stock" />
         <field name="arch" type="xml">
             <field name="property_cost_method" position="before">
-                <field name="suggested_margin" />
+                <field name="suggested_margin" widget="percentage" />
             </field>
         </field>
     </record>
