--- a/ol_product_pricing_review/views/product_product_views.xml
+++ b/ol_product_pricing_review/views/product_product_views.xml
@@ -1,6 +1,6 @@
 <odoo>
 
-    <record id="ol_product_template_form_view" model="ir.ui.view">
+    <record id="ol_product_pricing_review_product_template_form_view" model="ir.ui.view">
         <field name="name">product.template.form.view</field>
         <field name="model">product.template</field>
         <field name="priority">99</field>
@@ -14,16 +14,16 @@
                     <group>
                         <group>
                             <field name="based_on" invisible="1" />
-                            <field name="total_cost" readonly="1" />
-                            <field name="last_purchase_price" />
-                            <field name="last_purchase_margin" />
+                            <field name="total_cost" readonly="1" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
+                            <field name="last_purchase_price" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
+                            <field name="last_purchase_margin" widget="percentage" />
                         </group>
                         <group>
                             <group invisible="has_configurable_attributes">
                                 <field name="disable_price_reviews" />
                                 <field name="enable_margin_threshold" invisible="disable_price_reviews" />
-                                <field name="margin_min" invisible="not enable_margin_threshold or disable_price_reviews" />
-                                <field name="margin_max" invisible="not enable_margin_threshold or disable_price_reviews" />
+                                <field name="margin_min" invisible="not enable_margin_threshold or disable_price_reviews" widget="percentage" />
+                                <field name="margin_max" invisible="not enable_margin_threshold or disable_price_reviews" widget="percentage" />
                             </group>
                         </group>
                     </group>
@@ -32,38 +32,35 @@
             <field name="based_on" position="before">
                 <xpath expr="//label[@for='list_price']" position="move" />
                 <xpath expr="//div[@name='pricing']" position="move" />
-                <xpath expr="//label[@for='standard_price']" position="move" />
-                <xpath expr="//div[@name='standard_price_uom']" position="move" />
-                <field name="tariff_percent" invisible="has_configurable_attributes" widget="percentage" />
-                <field name="tooling_cost" position="move" invisible="has_configurable_attributes" />
-                <field name="defrayment_cost" position="move" invisible="has_configurable_attributes" />
-                <field name="carrier_multiplier_id" position="move" invisible="has_configurable_attributes" />
+                <label for="standard_price" invisible="product_variant_count &gt; 1 and not is_product_variant" />
+                <div name="standard_price_uom" invisible="product_variant_count &gt; 1 and not is_product_variant">
+                    <field name="standard_price" class="oe_inline" widget="monetary" options="{'currency_field': 'cost_currency_id', 'field_digits': True}" />
+                    <span groups="uom.group_uom">per
+                        <field name="uom_name" class="oe_inline"/>
+                    </span>
+                </div>
+                <field name="tariff_percent" invisible="has_configurable_attributes" widget="percentage" readonly="1" />
+                <field name="tooling_cost" position="move" invisible="has_configurable_attributes" readonly="1" />
+                <field name="defrayment_cost" position="move" invisible="has_configurable_attributes" readonly="1" />
+                <field name="carrier_multiplier_id" position="move" invisible="has_configurable_attributes" readonly="1" />
                 <field name="default_shipping_cost" position="move" invisible="has_configurable_attributes" />
-                <field name="override_margin" invisible="has_configurable_attributes" />
-                <field name="charm_price" invisible="has_configurable_attributes" />
-                <field name="override_price" invisible="has_configurable_attributes" />
-                <field name="special_price" invisible="has_configurable_attributes" />
+                <field name="override_margin" invisible="has_configurable_attributes" readonly="1" />
+                <field name="charm_price" invisible="has_configurable_attributes" readonly="1" />
+                <field name="override_price" invisible="has_configurable_attributes" readonly="1" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
+                <field name="special_price" invisible="has_configurable_attributes" readonly="1" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
             </field>
         </field>
     </record>
 
-    <record id="product_open_price_review" model="ir.actions.act_window">
-        <field name="context">{'default_product_id': active_id}</field>
-        <field name="name">Price Reviews</field>
-        <field name="res_model">product.price.review</field>
-        <field name="domain">[]</field> <!-- Force empty -->
-    </record>
-
     <!-- product.product_normal_form_view -->
-    <record id="ol_product_normal_form_view" model="ir.ui.view">
+    <record id="ol_product_pricing_review_product_normal_form_view" model="ir.ui.view">
         <field name="name">product.product.form</field>
         <field name="model">product.product</field>
+        <field name="priority">99</field>
         <field name="inherit_id" ref="product.product_normal_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//button[@name='open_pricelist_rules']" position="after">
-                <button class="oe_stat_button" name="action_view_price_reviews" type="object"
-                    groups="ol_product_pricing_review.group_pricing_review_user"
-                    invisible="type not in ['product', 'consu']" icon="fa-flask">
+                <button class="oe_stat_button" name="action_view_price_reviews" type="object" groups="ol_product_pricing_review.group_pricing_review_user" invisible="type not in ['product', 'consu']" icon="fa-flask">
                     <field string="Price Reviews" name="price_review_count" widget="statinfo" />
                 </button>
             </xpath>
@@ -73,5 +70,11 @@
         </field>
     </record>
 
+    <record id="product_open_price_review" model="ir.actions.act_window">
+        <field name="context">{'default_product_id': active_id}</field>
+        <field name="name">Price Reviews</field>
+        <field name="res_model">product.price.review</field>
+        <field name="domain">[]</field> <!-- Force empty -->
+    </record>
 
 </odoo>
