[FIX] ol_product_pricing_review

--- a/ol_product_pricing_review/views/product_price_review_views.xml
+++ b/ol_product_pricing_review/views/product_price_review_views.xml
@@ -52,9 +52,9 @@
                     </group>
                     <group>
                         <group>
-                            <field name="default_shipping_cost" readonly="state in ('reject', 'validated')" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
-                            <field name="suggested_margin" readonly="state in ('reject', 'validated')" />
-                            <field name="override_margin" readonly="state in ('reject', 'validated')" />
+                            <field name="default_shipping_cost" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
+                            <field name="suggested_margin" widget="percentage" />
+                            <field name="override_margin" readonly="state in ('reject', 'validated')" widget="percentage" />
                             <field name="calculated_price" readonly="state in ('reject', 'validated')" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
                             <field name="charm_price" readonly="state in ('reject', 'validated')" />
                             <field name="override_price" readonly="state in ('reject', 'validated')" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
